# YoloX-DeepLabV3Plus-MeterReader

./: CMakeLists.txt  README.md
include/: meter_detect.h  meter_reader.h  meter_readerv2.h  meter_seg.h
src/: main.cpp  meter_detect.cpp  meter_reader.cpp  meter_readerv2.cpp  meter_seg.cpp
weights/: deeplabv3p_f16.param  yolox_s.param
